Aug 14, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix saving of server filters (reported by Steffen Pankratz)

Aug 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add script install button
- add multiple sort modes per column (#1253101)
- fix compiler warnings
- add delete button for quickfilter
- update German translation

Aug 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add demo script

Jul 03, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for plugin scripts

Jun 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- move generic code for running a program into util.c
- Nexuiz support
- check for q3 based gametypes before parsing the server info

Jun 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add doom3 protocol 1.40 to menu (Steffen Pankratz)

Apr 29, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- honor setting to ignore bots when copying server info to clipboard

Apr 15, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add q3a Excessive Plus gametypes (patch by Jason Santos)

Apr 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add finish translation by Sami Laitinen

Mar 24, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- use separate server type for ut2004
- add epic's second ut2004 master

Mar 22, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- change default ET protocol to 84, fix qstat.cfg

Mar 06, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS file for 1.0.3

Feb 22, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix ut2k4 and doom3 master query not working after starting xqf

Feb 20, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix logic for applying colors

Feb 19, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- use GTK2 colors and Raleigh theme by default in GTK1 version
- update German translation
- reorder some structs to reduce size

Feb 18, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix use of wrong server type when adding servers (#1143801, thanks roerich