@@ -1,3 +1,7 @@
+Aug 20, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- fix gamespy and descent exec functions (reported by Steffen
+  Pankratz)
+
 Aug 14, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - fix saving of server filters (reported by Steffen Pankratz)
 
